@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-18T16:06:31Z",
+  "timestamp" : "2022-04-20T08:07:51Z",
   "count_outdated" : 4,
   "uniques_outdated" : 2,
-  "count" : 7,
-  "uniques" : 3,
+  "count" : 10,
+  "uniques" : 5,
   "views" : [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
