@@ -1,11 +1,16 @@
 {
-  "count": 3,
-  "uniques": 1,
+  "count": 6,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
