@@ -1,3 +1,9 @@
+2022-04-20T08:07:51Z:
+* notice: last 14d: all unq: 6 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 4 2 / 7 3
+* notice: next accum: outdated-all outdated-unq / all unq: 4 2 / 10 5
+* notice: prev json diff // prev day diff: unq all: +2 +3 / -0 -0 // +2 +3 / -0 -0
+
 2022-04-18T16:06:31Z:
 * notice: last 14d: all unq: 3 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 1 1 / 4 2
